tests/reference/asr-intrinsics_12-ff7ce44.stderr
semantic error: Arguments do not match for any generic procedure, kind
 --> tests/../integration_tests/intrinsics_12.f90:2:8
  |
2 | print*,kind(5) ! 4
  |        ^^^^^^^ 
